syntax = "proto3";

option csharp_namespace = "Accounting.Ledgers.Grpc.Models";

package accounting.ledgers;

message Ledger {
    string tenant_id = 1;
    string ledgerId = 2;
    string clientId = 3;
    int32 ledgerType = 4;
}
