syntax = "proto3";

import "Ledgers/Protos/Models/ledger.proto";

option csharp_namespace = "Accounting.Ledgers.Grpc";

package billing.ledgers;

service LedgersService {
  rpc GetLedger (GetLedgerRequest) returns (billing.ledgers.Ledger);
  rpc GetLedgers (GetLedgersRequest) returns (GetLedgersResponse);
  rpc CreateLedger (CreateLedgerRequest) returns (billing.ledgers.Ledger);
}

message GetLedgerRequest {
  string id = 1;
}

message GetLedgersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetLedgersResponse {
  repeated billing.ledgers.Ledger ledgers = 1;
}

message CreateLedgerRequest {
  string clientId = 1;
  int32 ledgerType = 2;
}
